--- a/assets/scss/imports/core/_variables.scss
+++ b/assets/scss/imports/core/_variables.scss
@@ -4,12 +4,12 @@
 :root {
   --app-height: 100vh;
 
-  --main-fonts: "eb-garamond", serif;
-  --neue-fonts: "neue-haas-grotesk-display", sans-serif;
+  --main-fonts: "neue-haas-grotesk-display", sans-serif;
+  --eb-fonts: "eb-garamond", serif;
 
   --main-bg-cl: #fff;
-  --main-text-cl: #000;
-  --black-cl: #000;
+  --main-text-cl: #262626;
+  --black-cl: #262626;
   --white-cl: #fff;
   --gray-cl: #ececec;
 }
