--- a/assets/scss/imports/pages/_home.scss
+++ b/assets/scss/imports/pages/_home.scss
@@ -38,7 +38,7 @@
 
         h3 {
           font-size: 1rem;
-          font-weight: 400;
+          font-weight: 500;
           text-transform: uppercase;
         }
 
@@ -162,7 +162,7 @@
     &_center {
       width: 100%;
       position: absolute;
-      top: 50%;
+      top: 55%;
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 10;
@@ -171,7 +171,7 @@
 
       h1 {
         font-size: 1.8rem;
-        font-weight: 400;
+        font-weight: 500;
       }
 
       @include maxW {
@@ -184,10 +184,18 @@
     }
 
     &_desc {
-      margin-top: 12px;
+      margin-top: 10px;
 
       p {
         font-size: 4rem;
+      }
+
+      @include maxW {
+        margin-top: 12px;
+
+        p {
+          font-size: 3.8rem;
+        }
       }
     }
 
@@ -197,7 +205,7 @@
       width: 120px;
       height: 30px;
       font-size: 1.5rem;
-      line-height: 32px;
+      line-height: 28px;
       text-transform: uppercase;
       cursor: pointer;
       transition: all 0.15s linear;
@@ -208,6 +216,7 @@
       }
 
       @include maxW {
+        margin-top: 45px;
         line-height: 1;
         display: flex;
         align-items: center;
@@ -223,7 +232,7 @@
       z-index: 10;
 
       @include maxW {
-        bottom: 43px;
+        bottom: 152px;
       }
     }
   }
@@ -246,15 +255,15 @@
 
         display: flex;
         align-items: center;
-        gap: 18px;
+        gap: 23px;
 
         p {
-          font-size: 1.2rem;
+          font-size: 1rem;
         }
 
         h2 {
-          font-size: 2.6rem;
-          font-weight: 400;
+          font-size: 2rem;
+          font-weight: 500;
         }
       }
     }
@@ -324,7 +333,7 @@
 
       p {
         margin-top: 10px;
-        font-size: 1.8rem;
+        font-size: 1.7rem;
         color: var(--black-cl);
         text-align: center;
       }
@@ -333,24 +342,35 @@
     @include maxW {
       &_left {
         position: absolute;
-        bottom: 25px;
+        bottom: 28px;
         right: 20px;
         z-index: 1;
         background: transparent;
         transition: opacity 0.2s ease;
+
+        &.--classic {
+          bottom: 21px;
+
+          a {
+            gap: 5px;
+            flex-direction: column;
+            align-items: flex-end;
+          }
+        }
       }
 
       &_heading {
         a {
           writing-mode: initial;
-          gap: 8px;
+          gap: 10px;
 
           p {
-            font-size: 1rem;
+            font-size: 0.8rem;
           }
 
           h2 {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
+            line-height: 0.95;
           }
         }
       }
@@ -496,33 +516,17 @@
 
     &_heading {
       position: absolute;
-      top: 9.028vw;
-      right: 13px;
+      top: 55%;
+      left: 50px;
+      transform: translateY(-50%);
       z-index: 10;
-      color: var(--white-cl);
-
-      &.--casual {
-        top: auto;
-        bottom: 6.944vw;
-        right: 47px;
-      }
-
-      h2 {
-        font-size: 3rem;
-        font-weight: 400;
-      }
 
       @include maxW {
-        top: 60px;
-        right: 30px;
+        left: 40px;
 
-        &.--casual {
-          bottom: 80px;
-          right: 30px;
-        }
-
-        h2 {
-          font-size: 2.7rem;
+        svg {
+          width: 120.56px;
+          height: auto;
         }
       }
     }
@@ -538,6 +542,7 @@
         border: 1px solid var(--black-cl);
         width: 120px;
         height: 30px;
+        line-height: 28px;
         text-align: center;
         font-size: 1.5rem;
         display: flex;
@@ -586,21 +591,6 @@
         padding: 0 5.486vw;
       }
 
-      &.--camp6 {
-        max-width: 320px;
-        padding-bottom: 20px;
-        margin-right: 20px;
-        margin-left: auto;
-
-        img {
-          object-position: bottom;
-        }
-      }
-
-      &.--camp17 {
-        padding: 0 20px;
-      }
-
       @include maxW {
         img {
           object-fit: cover;
@@ -612,90 +602,6 @@
           img {
             object-fit: contain;
           }
-        }
-
-        &.--camp6 {
-          max-width: 233px;
-          padding-bottom: 0;
-          margin-right: auto;
-
-          img {
-            object-fit: contain;
-            object-position: center;
-          }
-        }
-
-        &.--camp17 {
-          padding: 0;
-
-          img {
-            object-fit: contain;
-          }
-        }
-      }
-    }
-
-    &_merge {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-
-      &_wrap {
-        display: grid;
-        grid-template-columns: 21.127% 1fr;
-        align-items: flex-end;
-        gap: 69px;
-        padding-left: 20px;
-
-        picture {
-          height: fit-content;
-
-          img {
-            object-fit: contain;
-          }
-        }
-      }
-
-      @include maxW {
-        height: calc(100% - 69px);
-
-        &_wrap {
-          grid-template-columns: 1fr 28.986vw;
-          padding-left: 50px;
-          gap: 56px;
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-
-          picture.--pb {
-            position: relative;
-            z-index: 1;
-            display: block;
-            padding-bottom: calc(400 / 120 * 100%);
-
-            img {
-              position: absolute;
-              top: 0;
-            }
-          }
-        }
-      }
-    }
-
-    &_col {
-      @include minW {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-
-        &_items {
-          position: relative;
-          width: 100%;
-          height: 100%;
         }
       }
     }
