--- a/assets/scss/imports/pages/_home.scss
+++ b/assets/scss/imports/pages/_home.scss
@@ -507,6 +507,14 @@
       height: 100%;
       overflow: hidden;
 
+      &.--red {
+        background: #740101;
+      }
+
+      &.--start {
+        align-items: flex-start;
+      }
+
       @include maxW {
         display: flex;
         align-items: center;
@@ -591,6 +599,20 @@
         padding: 0 5.486vw;
       }
 
+      &.--camp7 {
+        padding: 7.639vw 0;
+        width: fit-content;
+      }
+
+      &.--camp9 {
+        padding-right: 7.639vw;
+
+        img {
+          object-fit: contain;
+          object-position: top;
+        }
+      }
+
       @include maxW {
         img {
           object-fit: cover;
@@ -602,6 +624,58 @@
           img {
             object-fit: contain;
           }
+        }
+
+        &.--camp7 {
+          padding: 17.633vw 27.536vw 0 0;
+
+          img {
+            object-fit: contain;
+          }
+        }
+
+        &.--camp9 {
+          padding-right: 11.111vw;
+        }
+      }
+    }
+
+    &_camp10 {
+      &_wrap {
+        display: grid;
+        grid-template-columns: 39.568% 1fr;
+        gap: 28px;
+        padding-top: 9.028vw;
+        padding-right: 20px;
+
+        picture {
+          img {
+            object-position: top;
+            object-fit: contain;
+          }
+        }
+      }
+
+      &_cl {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 26.389%;
+        background-color: #745330;
+        z-index: -1;
+      }
+
+      @include maxW {
+        &_wrap {
+          grid-template-columns: 36.232% 1fr;
+          gap: 10px;
+          padding-top: 24.155vw;
+          padding-right: 0;
+        }
+
+        &_cl {
+          width: 21.739%;
         }
       }
     }
