--- a/assets/scss/imports/core/_components.scss
+++ b/assets/scss/imports/core/_components.scss
@@ -9,9 +9,6 @@
   width: 100%;
   height: 100%;
   z-index: 101;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   overflow: hidden;
   opacity: 0;
   pointer-events: none;
@@ -59,6 +56,21 @@
 
     @include maxW {
       padding: 40px;
+      height: calc(100% - 69px);
+    }
+  }
+  
+  &_direction {
+    margin-top: 35px;
+    margin-bottom: 10px;
+    font-size: 0.9rem;
+
+    &:first-child {
+      margin-top: initial;
+    }
+
+    @include maxW {
+      font-size: 1.2rem;
     }
   }
 
